Playing with Mix Factor of Data Transfer Modifier Is Overwritting Data of Base Mesh #43671

Closed
opened 2015-02-15 16:39:02 +01:00 by ronan ducluzeau · 6 comments

System Information
ubuntu 14.04 64bits NVIDIA Titan Black proprietary driver 346.35

Blender Version
Broken: 35567d5
Worked: (optional)

Short description of error
If you have a mesh with custom normals set by sharp edges and want to mix this set-up with normals from another mesh by using a Data Transfer modifier,
everything goes right until you play with mix factor.
After playing with mix factor, more sharp edges are added to original mesh.
You can delete the modifier. Your original setup is lost, corrupted by newly created sharp edges.

Exact steps for others to reproduce the error
In this .blend file MixDT.blend ,
on the right , you can see a cubic shape with its custom normals made by using sharp edges and autosmooth enabled.
on the middle, there is a version of this cubic shape enhanced by use of Data Transfer modifier using a sphere as target object with mix mode set to Add and a mix factor at 1.
On the left side, mix factor was decreased. -> every edge of default mesh became a sharp edge.
Delete the modifier. -> extra sharp edges are not removed.

**System Information** ubuntu 14.04 64bits NVIDIA Titan Black proprietary driver 346.35 **Blender Version** Broken: 35567d5 Worked: (optional) **Short description of error** If you have a mesh with custom normals set by sharp edges and want to mix this set-up with normals from another mesh by using a Data Transfer modifier, everything goes right until you play with mix factor. After playing with mix factor, more sharp edges are added to original mesh. You can delete the modifier. Your original setup is lost, corrupted by newly created sharp edges. **Exact steps for others to reproduce the error** In this .blend file [MixDT.blend](https://archive.blender.org/developer/F143516/MixDT.blend) , on the right , you can see a cubic shape with its custom normals made by using sharp edges and autosmooth enabled. on the middle, there is a version of this cubic shape enhanced by use of Data Transfer modifier using a sphere as target object with mix mode set to Add and a mix factor at 1. On the left side, mix factor was decreased. -> every edge of default mesh became a sharp edge. Delete the modifier. -> extra sharp edges are not removed.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @zeauro

Added subscriber: @zeauro
Bastien Montagne self-assigned this 2015-02-15 17:58:25 +01:00

Confirmed, we need to duplicate edges for modifier, here. :/

Confirmed, we need to duplicate edges for modifier, here. :/

This issue was referenced by a98fc4f8f9

This issue was referenced by a98fc4f8f9bb887b934f999b8988727eb285b6d7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a98fc4f8f9.

Closed by commit a98fc4f8f9.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43671
No description provided.